--- a/src/Calculator/calculator.html
+++ b/src/Calculator/calculator.html
@@ -9,40 +9,42 @@
 </head>
 
 <body>
-    <div>
-        <input type="text" style="width: 200px" id="textBox" name="textBox" value="0">
-    </div>
+        <div>
+            <input type="number" style="width: 220px; height:40px" id="display" name="display" value="0">
+        </div>
 
-    <p>
-        <input type="button" id="reset" name="reset" value="초기화">
-        <input type="button" id="alert" name="alert" value="얼럿">
-        <input type="button" id="confirm" name="confirm" value="컨펌">
-    </p>
+        <p>
+            <input type="button" id="reset" style="width:50px; height:40px; font-size:80%" name="reset" value="초기화">
+            <input type="button" id="alert" style="width:50px; height:40px" name="alert" value="얼럿">
+            <input type="button" id="confirm" style="width:50px; height:40px" name="confirm" value="컨펌"><br>
+        </p>
 
-    <p class="num">
-        <input type="button" id="seven" name="seven" value="7">
-        <input type="button" id="eight" name="eight" value="8">
-        <input type="button" id="nine" name="nine" value="9"><br><br>
+        <p class="num">
+            <input type="button" id="seven" style="width:50px; height:40px" name="seven" value="7">
+            <input type="button" id="eight" style="width:50px; height:40px" name="eight" value="8">
+            <input type="button" id="nine" style="width:50px; height:40px" name="nine" value="9"><br><br>
 
-        <input type="button" id="four" name="four" value="4">
-        <input type="button" id="five" name="five" value="5">
-        <input type="button" id="six" name="six" value="6"><br><br>
+            <input type="button" id="four" style="width:50px; height:40px" name="four" value="4">
+            <input type="button" id="five" style="width:50px; height:40px" name="five" value="5">
+            <input type="button" id="six" style="width:50px; height:40px" name="six" value="6"><br><br>
 
-        <input type="button" id="one" name="one" value="1">
-        <input type="button" id="two" name="two" value="2">
-        <input type="button" id="three" name="three" value="3"><br><br>
+            <input type="button" id="one" style="width:50px; height:40px" name="one" value="1">
+            <input type="button" id="two" style="width:50px; height:40px" name="two" value="2">
+            <input type="button" id="three" style="width:50px; height:40px" name="three" value="3"><br><br>
 
-        <input type="button" id="zero" style="width:40pt" name="zero" value="0">
-        <input type="button" id="dot" name="dot" value=".">
-    </p>
+            <input type="button" id="zero" style="width:110px; height:40px" name="zero" value="0">
+            <input type="button" id="dot" style="width:50px; height:40px" name="dot" value=".">
+        </p>
 
-    <p class="calculation">
-        <input type="button" id="div" name="div" value="/"><br><br>
-        <input type="button" id="mul" name="mul" value="*"><br><br>
-        <input type="button" id="sub" name="sub" value="-"><br><br>
-        <input type="button" id="add" name="add" value="+"><br><br>
-        <input type="button" id="equal" name="equal" value="="><br><br>
-    </p>
+        <p class="calculation">
+            <input type="button" id="div" style="width:50px; height:40px" name="div" value="/"><br><br>
+            <input type="button" id="mul" style="width:50px; height:40px" name="mul" value="*"><br><br>
+            <input type="button" id="sub" style="width:50px; height:40px" name="sub" value="-"><br><br>
+            <input type="button" id="add" style="width:50px; height:40px" name="add" value="+"><br><br>
+            <input type="button" id="equal" style="width:50px; height:40px" name="equal" value="="><br>
+        </p>
 
+
+    </table>
 </body>
 </html>
