--- a/src/Calculator/calculator.html
+++ b/src/Calculator/calculator.html
@@ -14,7 +14,7 @@
         </div>
 
         <p>
-            <input type="button" id="reset" style="width:50px; height:40px; font-size:80%" name="reset" value="초기화">
+            <input type="button" id="reset" style="width:50px; height:40px;" name="reset" value="리셋">
             <input type="button" id="alert" style="width:50px; height:40px" name="alert" value="얼럿">
             <input type="button" id="confirm" style="width:50px; height:40px" name="confirm" value="컨펌"><br>
         </p>
@@ -33,6 +33,9 @@
             <input type="button" id="three" style="width:50px; height:40px" name="three" value="3"><br><br>
 
             <input type="button" id="zero" style="width:110px; height:40px" name="zero" value="0">
+        </p>
+
+        <p>
             <input type="button" id="dot" style="width:50px; height:40px" name="dot" value=".">
         </p>
 
