--- a/src/Calculator/calculator.html
+++ b/src/Calculator/calculator.html
@@ -10,7 +10,7 @@
 
 <body>
         <div>
-            <input type="number" style="width: 220px; height:40px" id="display" name="display" value="0">
+            <input type="number" style="width: 220px; height:40px; font-size: larger" id="display" name="display" value="0">
         </div>
 
         <p>
